crates/toml/tests/snapshots/invalid/float/inf-incomplete-03.stderr
TOML parse error at line 1, column 22
  |
1 | inf-incomplete-03 = -in
  |                      ^^
invalid float, expected `inf`
